# Ai-hub

./: README.md  gradio_app.py
conversation-memoy-in-langchain/: .gitignore  app.py  chat_3.json  main.py  pyproject.toml  user_input.txt
conversation-memoy-in-langchain/conversations/: chat_session-001.json
conversation-memoy-in-langchain/mlruns/0/: meta.yaml
conversation-memoy-in-langchain/mlruns/665300851488896104/: meta.yaml
conversation-memoy-in-langchain/mlruns/665300851488896104/3a60b421290246e7809e045e1af14033/: meta.yaml
conversation-memoy-in-langchain/mlruns/665300851488896104/8a021e470ae74dc4b84c68e9a31f2df8/: meta.yaml
conversation-memoy-in-langchain/mlruns/665300851488896104/8a021e470ae74dc4b84c68e9a31f2df8/artifacts/: bot_response.txt
conversation-memoy-in-langchain/mlruns/665300851488896104/8a021e470ae74dc4b84c68e9a31f2df8/params/: model_name
conversation-memoy-in-langchain/mlruns/665300851488896104/a5206a63413a4abf854f2fc486e51765/: meta.yaml
conversation-memoy-in-langchain/mlruns/665300851488896104/a5206a63413a4abf854f2fc486e51765/artifacts/: bot_response.txt
conversation-memoy-in-langchain/mlruns/665300851488896104/a6155201dfc34d56b56c7aae7e289a38/: meta.yaml
conversation-memoy-in-langchain/mlruns/665300851488896104/af3777acf8ad4cb2abc0cd007151cd7c/: meta.yaml
conversation-memoy-in-langchain/mlruns/665300851488896104/e5c84b8cc79a49d787b26a969af3247f/: meta.yaml
docker-model-runner/: main.py  readme.md
rag-app/: .gitignore  app.py  pyproject.toml  requirements.txt
rag-based-chatbot/: .gitignore  README.md  app.py  chatbot.py  complaints.db  database.py  gradio_app.py  main_chat_ui.py  pyproject.toml  requirements.txt  utils.py  view_db.py
rag-based-chatbot/knowledge_base/: faq.txt
rag-based-chatbot/logs/: chat_log.txt
rag-based-chatbot/vectorstore_index/: index.faiss  index.pkl
(+4 files in other folders)
